--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,16 @@ body{
     --color-cta:#5454d4;
     --color-items: #696871;
 }
+.price__element--best{
+    width: 370px;
+    padding: 60px 40px;
+    background-color: #ff7143;
+    --color-plan:rgb(255 255 255 / 75%);
+    --color-price:#fff;
+    --bg-cta:#9f3919;
+    --color-cta:#fff;
+    --color-items: #fff;
+}
 
 .price__name{
     color:var(--color-plan);
@@ -208,4 +218,119 @@ body{
     font-size: 1.2rem;
     margin-bottom: 50px;
     color: #fff;
+}
+.price__cta{
+    display: block;
+    padding: 20px 0;
+    border-radius: 10px;
+    text-decoration: none;
+    background-color: var(--bg-cta);
+    font-weight: 600;
+    color: var(--color-cta);
+    box-shadow: 0 0 1px rgba(0,0,0,.5);
+}
+
+/*testimony*/
+
+.testimony{
+    background-color: #e5e5f7;
+}
+.testimony__container{
+    display: grid;
+    grid-template-columns: 50px 1fr 50px;
+    gap: 1em;
+    align-items: center;
+}
+.testimony__body{
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2em;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    opacity: 0;
+    pointer-events: none;
+}
+.testimony__body--show{
+    pointer-events: unset;
+    opacity: 1;
+    transition:opacity 1.5s ease-in-out;
+}
+.testimony__img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: 50% 30%;
+}
+.testimony__texts{
+    max-width: 700px;
+}
+.testimony__course{
+    background-color: royalblue;
+    color: #fff;
+    display: inline-block;
+    padding: 5px;
+}
+.testimony__arrow{
+    width: 90%;
+    cursor: pointer;
+}
+/*Questions*/
+.questions{
+    text-align: center;
+}
+.questions__container{
+    display: grid;
+    gap: 2em;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+.questions__padding{
+    padding: 0;
+    transition: padding .3s;
+    border: 1px solid #5454D4;
+    border-radius: 6px;
+}
+.questions__padding--add{
+    padding-bottom: 30px;
+}
+.questions__answer{
+    padding: 0 30px 0;
+    overflow: hidden;
+}
+.questions__title{
+    text-align: left;
+    display: flex;
+    font-size: 20px;
+    padding: 30px 0 30px;
+    cursor: pointer;
+    color: var(--color-title);
+    justify-content: space-between;
+
+}
+.questions__arrow{
+    border-radius: 50%;
+    transform: rotate(180deg);
+    background-color: var(--color-title);
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    margin-left: 10px;
+    transition:  transform .3s;
+}
+.questions__arrow--rotate{
+    transform: rotate(360deg);
+}
+.questions__show{
+    text-align: left;
+    height: 0;
+    transition: height .3s;
+}
+.questions__img{
+    display: block;
 }
