--- a/css/style.css
+++ b/css/style.css
@@ -413,5 +413,41 @@ body{
 .footer__img{
     width: 30px;
 }
+/*Medias queries*/
 
+@media (max-width: 800px) {
+    .nav__menu{
+        display: block;
+    }
+    .nav__link--menu{
+        position: fixed;
+        background-color: #000;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        z-index: 100;/*Para obreponerse al contenido*/
+        opacity: 0;
+        pointer-events: none;/*Para no reconocer el mouse*/
+        transition: .7s opacity;
+    }
+    /*Modificador de nav link*/
+    .nav__link--show{
+        --show: block;
+        opacity: 1;
+        pointer-events: unset;/*Para volver al valor original*/
+    }
+    /*Posiciona etiqueta cerrar en la parte superior derecha*/
+    .nav__close{
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        width: 30px;
+        cursor: pointer;
+    }
 
+}
